fix align issue in Contact vCard button

--- a/mycollab-web/src/main/webapp/VAADIN/themes/mycollab/styles.css
+++ b/mycollab-web/src/main/webapp/VAADIN/themes/mycollab/styles.css
@@ -3448,6 +3448,9 @@ div.v-stylecalendar .weekdays TD,.v-stylecalendar .weeknumber,.v-stylecalendar .
 .readview-layout-body .v-horizontallayout-gridform-caption .v-horizontallayout-margin, .readview-layout-body .v-horizontallayout-gridform-field .v-horizontallayout-margin {
 	padding: 8px 5px 8px 18px;
 }
+.readview-layout-body .v-horizontallayout-gridform-field .v-horizontallayout .v-horizontallayout-margin {
+	padding: 0px;
+}
 .readview-layout-body .v-gridlayout-margin .gridform-caption {
 	background-color: rgb(212, 223, 239);
 	border-left: 1px solid #a9a9a9;
